--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
       <link rel="manifest" href="/manifest.json">
-      <meta name="theme-color" content="red darken-3"/>
+      <meta name="theme-color" content="#c62828"/>
     </head>
 
     <body>
