--- a/index.html
+++ b/index.html
@@ -1,53 +1,49 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-      <link rel="manifest" href="/manifest.json">
-      <meta name="theme-color" content="#c62828"/>
-    </head>
-
-    <body>
-      <div class="navbar-fixed">
-        <nav class="red darken-3">
-            <div class="nav-wrapper container">
-              <a href="#!" class="brand-logo">Homie</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-              <ul class="topnav right hide-on-med-and-down"></ul>
-            </div>
-          </nav>
-        </div>
-
-          <ul class="sidenav" id="mobile-demo"></ul>
-        
-          <div class="container" id="body-content"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>News Reader</title>
+    <meta name="description" content="My first PWA" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#00897B" />
+  </head>
+  <body>
+    <!-- Navigasi -->
+    <nav class="teal lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo" id="logo-container">News Reader</a>
+        <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
+        <ul class="topnav right hide-on-med-and-down"></ul>
+        <ul class="sidenav" id="nav-mobile"></ul>
       </div>
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script src="js/nav.js"></script>
-      <script>
-          // REGISTER SERVICE WORKER
-          if ("serviceWorker" in navigator) {
-            window.addEventListener("load", function() {
-              navigator.serviceWorker
+    </nav>
+    <!-- Akhir Navigasi -->
+  <div class="container" id="body-content"></div>
+  <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
+  <script src="js/materialize.min.js"></script>
+  <script src="js/api.js"></script>
+  <script>
+    // REGISTER SERVICE WORKER
+    if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function() {
+            navigator.serviceWorker
                 .register("/service-worker.js")
                 .then(function() {
-                  console.log("Pendaftaran ServiceWorker berhasil");
-                })
+                console.log("Pendaftaran ServiceWorker berhasil");
+            })
                 .catch(function() {
-                  console.log("Pendaftaran ServiceWorker gagal");
-                });
+                console.log("Pendaftaran ServiceWorker gagal");
             });
-          } else {
-            console.log("ServiceWorker belum didukung browser ini.");
-          }
-        </script>
-    </body>
-  </html>
-        
+        });
+    } else {
+        console.log("ServiceWorker belum didukung browser ini.");
+    }
+    // REQUEST API UNTUK PERTAMA KALI
+    document.addEventListener("DOMContentLoaded", function() {
+        getArticles();
+    });
+</script>
+</body>
+</html>
