--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,8 @@
-<h2>Selamat Datang</h2>
+<h2>Selamat datang!</h2>
+<p>Selamat datang di laman aplikasi web progresif pertama saya.</p>
 
-<p>Hallo, selamat datang di PWA saya</p>
+<div class="row">
+    <div class="col s12 m7" id="articles">
+<!-- Card berisi artikel akan disisipkan ke dalam sini. -->
+    </div>
+</div>
