--- a/article.html
+++ b/article.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="css/materialize.min.css" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#00897B" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
-       <!-- Navigasi -->
+    <!-- Navigasi -->
     <nav class="teal lighten-1" role="navigation">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo" id="logo-container">News Reader</a>
@@ -23,32 +26,35 @@
       </div>
     </nav>
     <!-- Akhir Navigasi -->
+
     <div class="container" id="body-content"></div>
+
     <script
       type="text/javascript"
       src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"
     ></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/api.js"></script>
+
     <script>
-        // REGISTER SERVICE WORKER
-        if ("serviceWorker" in navigator) {
-            window.addEventListener("load", function() {
-                navigator.serviceWorker
-                    .register("/service-worker.js")
-                    .then(function() {
-                    console.log("Pendaftaran ServiceWorker berhasil");
-                })
-                    .catch(function() {
-                    console.log("Pendaftaran ServiceWorker gagal");
-                });
+      // REGISTER SERVICE WORKER
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function() {
+          navigator.serviceWorker
+            .register("/service-worker.js")
+            .then(function() {
+              console.log("Pendaftaran ServiceWorker berhasil");
+            })
+            .catch(function() {
+              console.log("Pendaftaran ServiceWorker gagal");
             });
-        } else {
-            console.log("ServiceWorker belum didukung browser ini.");
-        }
-    document.addEventListener("DOMContentLoaded", function() {
-            getArticleById();
         });
+      } else {
+        console.log("ServiceWorker belum didukung browser ini.");
+      }
+      document.addEventListener("DOMContentLoaded", function() {
+        getArticleById();
+      });
     </script>
   </body>
 </html>
