--- a/index.html
+++ b/index.html
@@ -14,36 +14,41 @@
     <nav class="teal lighten-1" role="navigation">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo" id="logo-container">News Reader</a>
-        <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
+        <a href="#" class="sidenav-trigger" data-target="nav-mobile">&#9776;</a>
+
         <ul class="topnav right hide-on-med-and-down"></ul>
         <ul class="sidenav" id="nav-mobile"></ul>
       </div>
     </nav>
     <!-- Akhir Navigasi -->
-  <div class="container" id="body-content"></div>
-  <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/api.js"></script>
-  <script>
-    // REGISTER SERVICE WORKER
-    if ("serviceWorker" in navigator) {
+
+    <div class="container" id="body-content"></div>
+
+    <script src="js/materialize.min.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/api.js"></script>
+
+    <script>
+      // REGISTER SERVICE WORKER
+      if ("serviceWorker" in navigator) {
         window.addEventListener("load", function() {
-            navigator.serviceWorker
-                .register("/service-worker.js")
-                .then(function() {
-                console.log("Pendaftaran ServiceWorker berhasil");
+          navigator.serviceWorker
+            .register("/service-worker.js")
+            .then(function() {
+              console.log("Pendaftaran ServiceWorker berhasil");
             })
-                .catch(function() {
-                console.log("Pendaftaran ServiceWorker gagal");
+            .catch(function() {
+              console.log("Pendaftaran ServiceWorker gagal");
             });
         });
-    } else {
+      } else {
         console.log("ServiceWorker belum didukung browser ini.");
-    }
-    // REQUEST API UNTUK PERTAMA KALI
-    document.addEventListener("DOMContentLoaded", function() {
+      }
+
+      // REQUEST API UNTUK PERTAMA KALI
+      document.addEventListener("DOMContentLoaded", function() {
         getArticles();
-    });
-</script>
-</body>
+      });
+    </script>
+  </body>
 </html>
